# audio-recognizer

./: .gitignore  CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-05-29-audio-recognition-engine.md
src/: main.cpp
src/dsp/: fft.cpp  fft.h  hashing.h  peaks.cpp  peaks.h  spectrogram.cpp  spectrogram.h
tests/: test_fft.cpp  test_hashing.cpp  test_peaks.cpp  test_spectrogram.cpp
